<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/view_stats_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/view_statistic_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_statistics_screen"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/space"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <Button
        android:id="@+id/choose_sport_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_sport" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/space"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <Button
        android:id="@+id/choose_team_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_team"  
        android:enabled="false"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       	android:text="@string/space"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <Button
        android:id="@+id/choose_game_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_game"
        android:enabled="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/space"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
   	<Button
        android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_button"
        android:enabled="false" />
	    
	<Button
        android:id="@+id/send_game_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_game_button"
        android:enabled="false" />

</LinearLayout>
