<?xml version="1.0" encoding="utf-8"?>
<!-- the main window screen -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/shotChart"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:background="@color/green"
    android:orientation="vertical"
    android:gravity="top">

    <!-- setting up a frame for the away team and then adding a textview to display name and the dafault name is set to AWAY-->

    <FrameLayout
        android:id="@+id/titleFrame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="@dimen/padding" 
        android:layout_alignRight="@+id/scoresFrame">

        <TextView
            android:id="@+id/awayTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/away_name" />          
    </FrameLayout>
    
    <!-- setting up a frame for the home team and then adding a textview to display name and the default name is set to HOME-->

    <FrameLayout
        android:id="@+id/titleFrame2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:paddingLeft="@dimen/padding"
        android:layout_alignLeft="@+id/scoresFrame2">
        
        <TextView
            android:id="@+id/homeTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_name" />
    </FrameLayout>
    
    <!-- setting up a frame for the home team and then adding a textview to display score-->
    <FrameLayout
        android:id="@+id/scoresFrame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:padding="@dimen/padding"
        android:layout_below="@+id/titleFrame">
        
		<TextView
            android:id="@+id/awayScoreTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:background="@color/black"
          	android:textColor="@color/red"
          	android:textSize="@dimen/score_text"
            android:text="@string/away_points" />
    </FrameLayout>

    <!-- setting up a frame for the home team and then adding a textview to display score-->
    <FrameLayout
        android:id="@+id/scoresFrame2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:padding="@dimen/padding"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/titleFrame2">
        
		<TextView
            android:id="@+id/homeScoreTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:background="@color/black"
            android:textColor="@color/red"
            android:textSize="@dimen/score_text"
            android:text="@string/home_points" />
                
   </FrameLayout>
    
		<!-- center panel: the interactive courts -->
   	<RelativeLayout
        android:id="@+id/interactiveFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_below="@+id/scoresFrame2"
		android:layout_above="@+id/tripleOptionRow">

   	    <ImageView
   		    android:id="@+id/grassfieldBackground"
   		    android:layout_width="match_parent"
   		    android:layout_height="match_parent"
   		    android:contentDescription="@string/hardwood_floor"
   		    android:src="@drawable/grassfield"/>
   	    
   		<ImageView
   		    android:id="@+id/soccerfield"
   		    android:layout_width="match_parent"
   		    android:layout_height="match_parent"
   		    android:contentDescription="@string/basketball_court"
   		    android:src="@drawable/soccerfield" />
  	    
    </RelativeLayout>

	<!-- bottom row: the buttons -->
    <TableRow
        android:id="@+id/tripleOptionRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" >
	
        <Button
            android:id="@+id/optionButton1"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/choice_one"/>

        <Button
            android:id="@+id/optionButton2"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/choice_two" />
        
        <Button
            android:id="@+id/optionButton3"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/choice_three"/>
        
    </TableRow>

   
   </RelativeLayout>
