<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
	
    <LinearLayout 
        android:id="@+id/statsTitle"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
    	
        <TextView 
     		android:id="@+id/homeTeamStatText"
     		android:layout_width="match_parent"
     		android:layout_height="wrap_content"
     		android:layout_weight="1"
     		android:text="@string/stats_home_team_name"
     		android:gravity="center"
     		android:textSize="@dimen/very_large_text"/>
        
        <TextView 
     		android:id="@+id/awayTeamStatText"
     		android:layout_width="match_parent"
     		android:layout_height="wrap_content"
     		android:layout_weight="1"
     		android:text="@string/stats_away_team_name"
     		android:gravity="center"
			android:textSize="@dimen/very_large_text"/>
        
    </LinearLayout>  
    
    <TextView
        android:id="@+id/statisticTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/statsTitle"
        android:padding="@dimen/padding"
        android:text="@string/statistic_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />
	
    
   	<ScrollView
        android:id="@+id/playersScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/statisticTitle"
    	android:padding="@dimen/padding">
		
        <LinearLayout
            android:id="@+id/playerListLayout"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:orientation="vertical">
        	
       	</LinearLayout>
    </ScrollView>

</RelativeLayout>
